--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,79 @@
-name: Build kernel
+name: Build Kernel
 
 on:
   push:
     branches:
-      Grass-Unified
-  pull_request:
+      - Grass
+  pull_request: 
     branches:
-      Grass-Unified
+      - Grass
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
-
-    name: "Building kernel"
+      fail-fast: false
+      matrix:
+        device: [a51, m31s, f41, m31, m21]
+        rom: [aosp, oneui]
+        ksu: ['', '--no-ksu']  # Empty string for KSU, --no-ksu for non-KSU
+    name: "🚧 Build ${{matrix.device}} ${{matrix.rom}} ${{matrix.ksu == '' && 'KSU' || 'NoKSU'}}"
+    
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3.5.3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
-      - name: Install packages & setup
-        run: |
-          sudo apt update
-          bash <(curl https://gist.githubusercontent.com/Royna2544/0feeeb35a6d1782b186990ff2a0b3657/raw/b170134a94dac3594df506716bc7b802add2724b/setup.sh)
-          sudo apt install bison flex libssl-dev python3
-          cp local.config.sample local.config
-          echo "OBJ=arch/arm64/boot/Image" >> local.config
-      - name: Run build
-        run: |
-          python build_kernel.py --aosp --target=a51
-      - name: Upload kernel
-        uses: actions/upload-artifact@v3.1.2
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          name: Image
-          path: out/arch/arm64/boot/Image
+          python-version: '3.x'
 
+      - name: Install packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            bison \
+            flex \
+            libssl-dev \
+            python3 \
+            python-is-python3 \
+            libarchive-tools
+
+      - name: Setup toolchain
+        run: |
+          mkdir -p toolchain
+          cd toolchain
+          echo 'Downloading antman and syncing...'
+          bash <(curl -s "https://raw.githubusercontent.com/Neutron-Toolchains/antman/main/antman") -S=05012024
+          echo 'Patching for glibc...'
+          bash <(curl -s "https://raw.githubusercontent.com/Neutron-Toolchains/antman/main/antman") --patch=glibc
+          echo 'Toolchain setup completed'
+
+      - name: Build kernel
+        run: |
+          python build_kernel.py --target=${{matrix.device}} --${{matrix.rom}} ${{matrix.ksu}}
+        
+      - name: Check build artifacts
+        id: check_files
+        run: |
+          if ls Grass*.zip 1> /dev/null 2>&1; then
+            echo "zip_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "zip_exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Upload build to Telegram
+        if: steps.check_files.outputs.zip_exists == 'true'
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_KEY }}
+          document: ./Grass*.zip
+          message: |
+            📦 Grass Kernel for:
+            📱 Device: ${{matrix.device}}
+            📦 ROM: based-${{matrix.rom}}
+            🔧 KSU: ${{matrix.ksu == '' && 'Yes' || 'No'}}
